--- a/web-app/package.json
+++ b/web-app/package.json
@@ -39,7 +39,7 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:4000/",
+  "proxy": "http://93.127.202.166:4000/",
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
   }
